src/objects/SI_Exceptions__c.object
<CustomObject>
    <description>This object contains all errors when DML statements fail</description>
    <fields>
        <fullName>SI_Class_Name__c</fullName>
        <description>This holds the class name</description>
        <label>Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Exception__c</fullName>
        <description>This field holds the Exception thrown by Salesforce</description>
        <label>Exception</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SI_Login_User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field holds the User Id of the User in Context</description>
        <label>Login User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SI_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SI_Method_Name__c</fullName>
        <description>This field holds the method name where the issue occured</description>
        <label>Method Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Object_Name__c</fullName>
        <description>This holds the Object Name on which we are doing a DML Operation</description>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Record_Id__c</fullName>
        <description>This holds the Record Id of the record which is getting inserted, updated or deleted</description>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Exception</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Exception-{00000000}</displayFormat>
        <label>Exception Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>